set(_TARGET_NAME example_parser)

file (GLOB _SOURCE_FILES *.cpp)
file (GLOB _HEADER_FILES *.hpp)

set (_PUBLIC_INCLUDE_DIR
		${CMAKE_CURRENT_SOURCE_DIR}
		)

set (_PRIVATE_INCLUDE_DIR
		${Boost_INCLUDE_DIRS}
		)
set (_PRIVATE_DEFINITIONS
		BOOST_ALL_NO_LIB
		)

set (_PUBLIC_DEFINITIONS
		#
		)

helper_add_library(${_TARGET_NAME}
		_SOURCE_FILES
		_HEADER_FILES
		_PUBLIC_INCLUDE_DIR
		_PRIVATE_INCLUDE_DIR
		_PRIVATE_DEFINITIONS
		_PUBLIC_DEFINITIONS
		FALSE)

set (_PUBLIC_LIBRARIS
		udt_share
		)

set (_PRIVATE_LIBRARIS
		#
		)

helper_target_link_libraries(${_TARGET_NAME}
		_PUBLIC_LIBRARIS
		_PRIVATE_LIBRARIS
		)

install(TARGETS ${_TARGET_NAME}
		LIBRARY DESTINATION ${${PROJECT_NAME}_INSTALL_PLUGIN_PATH} COMPONENT examples
		#ARCHIVE DESTINATION ${${PROJECT_NAME}_INSTALL_PLUGIN_PATH}  COMPONENT examples
		RUNTIME DESTINATION ${${PROJECT_NAME}_INSTALL_PLUGIN_PATH}  COMPONENT examples
		)
install(TARGETS ${_TARGET_NAME}		
		ARCHIVE DESTINATION "${${PROJECT_NAME}_INSTALL_PREFIX}${CMAKE_INSTALL_LIBDIR}"  COMPONENT examples		
		)		
