SET(TARGET_NAME example_parser)

SET(EXAMPLE_PARSER_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH  "Include path for the header files of example parser" )

add_definitions(${LOGGING_DEFENITIONS} -DEXAMPLE_PARSER_EXPORTS)

file(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file (GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

include_directories (${CMAKE_CURRENT_SOURCE_DIR} ${SHARE_INCLUDES} ${Boost_INCLUDE_DIRS} ${CUSTOMER_INCLUDES} ${UDT_SHARE_INCLUDES} ${LOGGING_INCLUDES})

add_library (${TARGET_NAME} SHARED
			${SOURCE_FILES} ${HEADER_FILES})

target_link_libraries(	${TARGET_NAME} 
						${PLATFORM_LIBS} 
						${LOGGING_LIBRARIES}
						${UDT_SHARE_LIBRARIES})

install(TARGETS ${TARGET_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
                          ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
                          RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)