PROJECT(UDT_KERNEL C CXX)
SET(TARGET_NAME Kernel)

configure_version(KERNEL ${CMAKE_CURRENT_SOURCE_DIR} 0 1)

add_definitions(${LOGGING_DEFENITIONS})
file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)			
file (GLOB_RECURSE HEADER_FILES ../include/*.h ../include/*.hpp)

#add_dependencies(${TARGET_NAME} ${SHARE_TARGET_NAME} ${UDT_SHARE_TARGET_NAME})

include_directories (${CMAKE_CURRENT_SOURCE_DIR} ${SHARE_INCLUDES} ${Boost_INCLUDE_DIRS} ${TCLAP_INCLUDES} ${UDT_SHARE_INCLUDES} ${LOGGING_INCLUDES})

add_executable (${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})

target_link_libraries(${TARGET_NAME} ${PLATFORM_LIBS} ${SHARE_LIBRARIES} ${UDT_SHARE_LIBRARIES} ${LOGGING_LIBRARIES})

install(TARGETS ${TARGET_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
                          ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
                          RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
