PROJECT(${PROJECT_NAME}_kernel C CXX)
SET(TARGET_NAME Kernel)

configure_version(${TARGET_NAME} ${CMAKE_CURRENT_SOURCE_DIR} 0 1)

add_definitions(${LOGGING_DEFENITIONS})
file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)			
file (GLOB_RECURSE HEADER_FILES ../include/*.h ../include/*.hpp)

include_directories (${CMAKE_CURRENT_SOURCE_DIR} ${SHARE_INCLUDES} ${Boost_INCLUDE_DIRS} ${TCLAP_INCLUDES} ${UDT_SHARE_INCLUDES} ${LOGGING_INCLUDES})

share_add_executable(${TARGET_NAME} SOURCE_FILES HEADER_FILES TRUE)

#target_link_libraries(${TARGET_NAME} ${PLATFORM_LIBS} ${SHARE_LIBRARIES} ${UDT_SHARE_LIBRARIES} )
share_target_link_libraries(${TARGET_NAME} ${PLATFORM_LIBS}  )
share_add_dependency(${TARGET_NAME} ${SHARE_LIBRARIES} ${UDT_SHARE_LIBRARIES})

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/gui/ DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/gui)