set(_TARGET_NAME udt_share)


file(GLOB _SOURCE_FILES
		${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
		)

file (GLOB _HEADER_FILES
		${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
		)

set (_PUBLIC_INCLUDE_DIR
		${CMAKE_CURRENT_SOURCE_DIR}/include
		#${SHARE_INCLUDES}
		)
set (_PRIVATE_INCLUDE_DIR
		${Boost_INCLUDE_DIRS}
		)
set (_PRIVATE_DEFINITIONS
		BOOST_ALL_NO_LIB
		)

set (_PUBLIC_DEFINITIONS
		#
		)

#${${PROJECT_NAME}_DEFAULT_PLUGIN_DIR}

helper_add_library(${_TARGET_NAME}
		_SOURCE_FILES
		_HEADER_FILES
		_PUBLIC_INCLUDE_DIR
		_PRIVATE_INCLUDE_DIR
		_PUBLIC_DEFINITIONS
		_PRIVATE_DEFINITIONS
		TRUE)
configure_version_for(${_TARGET_NAME})

set (_PUBLIC_LIBRARIS
		${SHARE_LIBRARIES}
		)

set (_PRIVATE_LIBRARIS
		#
		)

helper_target_link_libraries(${_TARGET_NAME}
		_PUBLIC_LIBRARIS
		_PRIVATE_LIBRARIS
		)

install(FILES 	include/UDT/udt_types.h
				include/UDT/udt_share_macros.h
        		include/UDT/programm_id.h
				include/UDT/IExtParser.h
				include/UDT/CParserFactory.h
				include/UDT/udt_rtc.h
				DESTINATION "${${PROJECT_NAME}_INSTALL_PREFIX}${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}" COMPONENT headers
		)

string(TOUPPER ${_TARGET_NAME} _TARGET_NAME_UP)

set(_CONFIG_PLUGIN_PATH ${${PROJECT_NAME}_INSTALL_PLUGIN_PATH})
set(_CONFIG_PLUGIN_DIR ${${PROJECT_NAME}_DEFAULT_PLUGIN_DIR})
set(_CONFIG_INSTALL_GUI_PATH ${${PROJECT_NAME}_INSTALL_GUI_PATH})
set(_CONFIG_GUI_PATH ${${PROJECT_NAME}_GUI_PATH})


set(${_TARGET_NAME_UP}_CONFIG_CMAKE_FILE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ConfigUdtShare.cmake.in)
helper_export_library(${_TARGET_NAME})
unset(_CONFIG_PLUGIN_DIR)
unset(_CONFIG_PLUGIN_PATH)
						  
