SET(TARGET_NAME customer)

SET(CUSTOMER_TARGET_NAME ${TARGET_NAME})
SET(CUSTOMER_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/../include CACHE PATH  "Include path for the header files of customer" )

add_definitions(${LOGGING_DEFENITIONS} -DCUSTOMER_EXPORTS)

configure_version(CUSTOMER ${CMAKE_CURRENT_SOURCE_DIR} 0 2)

file(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)			
list (APPEND SOURCE_FILES    ${CMAKE_CURRENT_SOURCE_DIR}/revision.c)

file (GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/../include/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../include/*.hpp)

include_directories (${CMAKE_CURRENT_SOURCE_DIR}/../include ${SHARE_INCLUDES} ${Boost_INCLUDE_DIRS} ${TCLAP_INCLUDES} ${UDT_SHARE_INCLUDES} ${LOGGING_INCLUDES})

add_library (${TARGET_NAME} ${USER_DEFINED_DYNAMIC_OR_STATIC}
			${SOURCE_FILES} ${HEADER_FILES})

target_link_libraries(${TARGET_NAME} ${PLATFORM_LIBS} ${SHARE_LIBRARIES} ${UDT_SHARE_LIBRARIES} ${LOGGING_LIBRARIES})

SET(CUSTOMER_LIBRARIES  ${TARGET_NAME} CACHE STRING "CUSTOMER_LIBRARIES" FORCE)#fixme must be filepath

install(TARGETS ${TARGET_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
                          ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
                          RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
						  
install(FILES 	${CMAKE_CURRENT_SOURCE_DIR}/../include/CCustomer.h
				${CMAKE_CURRENT_SOURCE_DIR}/../include/customer.h
				${CMAKE_CURRENT_SOURCE_DIR}/../include/customer_export.h
		DESTINATION ${CMAKE_INSTALL_PREFIX}/include)