set(_TARGET_NAME inheritance_protocol_parser)

file (GLOB _SOURCE_FILES *.cpp)
file (GLOB _HEADER_FILES *.hpp)

set (_PUBLIC_INCLUDE_DIR
		${CMAKE_CURRENT_SOURCE_DIR}
		)

set (_PRIVATE_INCLUDE_DIR
		${Boost_INCLUDE_DIRS}
		${CUSTOMER_INCLUDES}
		)
set (_PRIVATE_DEFINITIONS
		BOOST_ALL_NO_LIB
		)

set (_PUBLIC_DEFINITIONS
		#
		)

helper_add_library(${_TARGET_NAME}
		_SOURCE_FILES
		_HEADER_FILES
		_PUBLIC_INCLUDE_DIR
		_PRIVATE_INCLUDE_DIR
		_PRIVATE_DEFINITIONS
		_PUBLIC_DEFINITIONS
		FALSE)

set (_PUBLIC_LIBRARIS
		${CUSTOMER_LIBRARIES}
		)

set (_PRIVATE_LIBRARIS
		#
		)

helper_target_link_libraries(${_TARGET_NAME}
		_PUBLIC_LIBRARIS
		_PRIVATE_LIBRARIS
		)
set_property(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD 14)

install(TARGETS ${_TARGET_NAME}
		LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/plugins
		ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
		RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/plugins
		)