SET(TARGET_NAME udp_main_channel)

add_definitions(${LOGGING_DEFENITIONS} -DUDP_MAIN_CHANNEL_EXPORTS)

configure_version(UDP_MAIN_CHANNEL ${CMAKE_CURRENT_SOURCE_DIR} 0 1)

file(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)			
list (APPEND SOURCE_FILES    ${CMAKE_CURRENT_SOURCE_DIR}/revision.c)

file (GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

include_directories (${CMAKE_CURRENT_SOURCE_DIR} ${SHARE_INCLUDES} ${Boost_INCLUDE_DIRS} ${CUSTOMER_INCLUDES} ${UDT_SHARE_INCLUDES} ${LOGGING_INCLUDES})

add_library (${TARGET_NAME} ${USER_DEFINED_DYNAMIC_OR_STATIC}
			${SOURCE_FILES} ${HEADER_FILES})

target_link_libraries(${TARGET_NAME} ${PLATFORM_LIBS} ${SHARE_LIBRARIES} ${UDT_SHARE_LIBRARIES} ${LOGGING_LIBRARIES} ${CUSTOMER_LIBRARIES})

install(TARGETS ${TARGET_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
                          ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
                          RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)